--- a/MET-STI2024_Reassessment_of_retraction_indexing_agreement.ipynb
+++ b/MET-STI2024_Reassessment_of_retraction_indexing_agreement.ipynb
@@ -5075,21 +5075,23 @@
     "mycolor_002 = dict(zip(table000['RIA_Score(%)'], table000['Color']))\n",
     "sns.barplot(y=table002['Fraction_in_Unionlist(%)'], x=table000['RIA_Score(%)'], \n",
     "            ax=ax1, palette=mycolor_000, ci=None)\n",
-    "ax1.set_title('April 2023 union list')\n",
+    "ax1.set_title('April 2023 union list',fontsize=15)\n",
     "ax1.set_xlabel(\"Retraction Indexing Agreement Score (%)\")\n",
     "ax1.set_ylabel(\"Fraction of IDs in Unionlist (%)\")\n",
     "ax1.tick_params(axis='y', labelsize=14) \n",
+    "\n",
     "\n",
     "\n",
     "# Plotting table001 - Newly added items to STI2023\n",
     "mycolor_001 = dict(zip(table001['RIA_Score(%)'], table001['Color']))\n",
     "sns.barplot(y=table001['Fraction_in_Unionlist(%)'], x=table001['RIA_Score(%)'], \n",
     "            ax=ax2, palette=mycolor_001, ci=None)\n",
-    "ax2.set_title('Items added to the union list: May 2023 to July 2024')\n",
+    "ax2.set_title('Items added to the union list: May 2023 to July 2024',fontsize=15)\n",
     "ax2.set_xlabel(\"Retraction Indexing Agreement Score (%)\", fontsize=12)\n",
     "ax2.set_ylabel(\"\")\n",
     "# ax2.yaxis.set_visible(True)\n",
     "ax2.tick_params(axis='x', labelsize=14) \n",
+    "ax2.set_xticks([])\n",
     "\n",
     "# Remove y-axis labels and ticks from the second subplot\n",
     "ax2.set_yticklabels([])\n",
@@ -5102,6 +5104,9 @@
     "for ax in [ax1, ax2]:\n",
     "    ax.set_ylim(0, max_y + 10)  # Add some padding at the top\n",
     "    ax.set_yticks(range(0, int(max_y) + 11, 10))\n",
+    "    ax.set_xticks([])\n",
+    "\n",
+    "\n",
     "\n",
     "# Create a combined legend\n",
     "legend_labels = {\n",
@@ -5114,7 +5119,8 @@
     "legend_handles = [mpatches.Patch(color=color, label=label) for color, label in legend_labels.items()]\n",
     "\n",
     "# Place the combined legend outside the top of the plot\n",
-    "fig.legend(handles=legend_handles, title=\"RIA Score Range\", loc=\"upper center\", bbox_to_anchor=(0.5, 1.05), ncol=4)\n",
+    "fig.legend(handles=legend_handles, title=\"Retraction Indexing Agreement Score Range\", title_fontsize=15,\\\n",
+    "           loc=\"upper center\", bbox_to_anchor=(0.5, 1.10), ncol=4,prop={'size': 15})\n",
     "\n",
     "# Label bars with noDOIs values for table000\n",
     "for bar, noDOIs, frc in zip(ax1.patches, table002['noDOIs'], table002['Fraction_in_Unionlist(%)']):\n",
@@ -5134,11 +5140,10 @@
     "\n",
     "# Customize figure appearance\n",
     "fig.patch.set_facecolor('#ccd9ff')\n",
-    "plt.tight_layout(pad=2.0, rect=[0, 0, 1, 1])  # Adjust layout to make room for legend\n",
+    "plt.tight_layout(pad=1.0, rect=[0, 0, 1, 1])  # Adjust layout to make room for legend\n",
     "\n",
-    "plt.savefig(result_dir+'unionlist_ria_proportion_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n"
+    "# plt.savefig(result_dir+'unionlist_ria_proportion_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
