Update Step 6 notebook
Remove inaccurate note re: which identifiers were compared.

--- a/src/Step6_ DataAnalysis.ipynb
+++ b/src/Step6_ DataAnalysis.ipynb
@@ -2354,8 +2354,7 @@
    "id": "5f1cba07",
    "metadata": {},
    "source": [
-    "## Section 5: Intersection of Indexed Retracted Publication (Using their DOIs only)\n",
-    "- PubMed Items considered here are those with DOIs"
+    "## Section 5: Intersection of Indexed Retracted Publication"
    ]
   },
   {
