Update Step1 to include PubMed request limit warning

--- a/src/Step1_DataCollectionFromSources_and_UnionList.ipynb
+++ b/src/Step1_DataCollectionFromSources_and_UnionList.ipynb
@@ -723,6 +723,7 @@
     "                                                \n",
     "\n",
     "print(f'After double check duplication, the confirm size of the all pubmids is {len(set(retracted_paper_pmids))} records')"
+    "print('PLEASE NOTE: If any interval of years returned over 10K results, rerun this cell with a smaller interval_year value. PubMed can only return 10K items per request.')"
    ]
   },
   {
